# UNIVALI-ProcessamentoDeImagens

./: .gitignore  .gitignore.txt
AnaliseDeArtigo_01/: Analise.md
AnaliseDeArtigo_01/diagramas/: diagrama.drawio
BitMapManipulation/src/: main.rs
BitMapManipulator/: Cargo.toml
BitMapManipulator/sample/src/: src_img_01.aseprite  src_img_02.aseprite
BitMapManipulator/src/: main.rs
RuidoGaussiano/: Cargo.toml
RuidoGaussiano/src/: args.rs  hmath.rs  imgops.rs  main.rs
