[package]
name = "ruido_gaussiano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
show-image = { version = "0.12.3", features = ["image", "save"]}
rand = "0.8.5"
rand_distr = "0.4.3"
clap = { version = "3.2.20", features = [ "derive" ]}
plotters = "0.3"
tiff = "0.7.3"